--- a/public/css/main.css
+++ b/public/css/main.css
@@ -90,9 +90,11 @@ body {
     float: left;
     width: 280px;
     height: 100%;
+    z-index: 5;
     border-right: 1px solid #e9e9e9;
     box-shadow: 0 0 15px rgba(0,0,0,.15);
     background: #fff;
+
 
 }
 
@@ -137,4 +139,58 @@ body {
 
 
 }
+
+#view-conteudo {
+    position: fixed;
+    float: left;
+    width: 100%;
+    height: 100%;
+    padding: 20px 40px 20px 300px;
+    z-index: 1;
+
+}
+
+form.form-padrao{
+    float: left;
+    width: 100%;
+}
+form.form-padrao label {
+    float: left;
+    width: 49%;
+    height: 60px;
+    padding: 7px 15px;
+    border: 1px solid #e9e9e9;
+    background: #fff;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+form.form-padrao label span{
+    float: left;
+    width: 100%;
+    font: 400 .75em 'Arial';
+    color: #c7c7c7;
+    padding-bottom: 5px;
+
+}
+form.form-padrao label input{
+    float:left;
+    width: 100%;
+    color: #e5e5e5;
+    font: 400 1.25em 'Arial';
+    background: transparent;
+
+}
+form.form-padrao label.submit{
+    background: #0ad181;
+    border-color: #0aaa67;
+
+}
+form.form-padrao label.submit input{
+    font-weight: 800;
+    text-transform: uppercase;
+    line-height: 50px;
+    color: #f9f9f9;
+}
+
 
